Here's the commented version of the code:

```c++
/*
 *
 * Copyright 2021 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Include necessary gRPC headers
#include <grpcpp/ext/proto_server_reflection_plugin.h>
#include <grpcpp/grpcpp.h>
#include <grpcpp/health_check_service_interface.h>

// Standard C++ headers
#include <cstddef>
#include <cstdint>
#include <iostream>
#include <string>

// Abseil headers for flags and logging
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_format.h"

// Include the generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"
#else
#include "helloworld.grpc.pb.h"
#endif

// Define command line flags using Abseil
ABSL_FLAG(uint16_t, port, 50051, "Server port for the service");
ABSL_FLAG(size_t, quota, 20, "Resource quota, in megabytes");

namespace {

/**
 * @class SlowReadingBidiReactor
 * @brief A server-side reactor for bidirectional streaming RPCs that processes requests slowly.
 *
 * This reactor intentionally sleeps for 1 second after processing each request
 * to demonstrate slow request handling. It inherits from gRPC's ServerBidiReactor
 * for bidirectional streaming support.
 */
class SlowReadingBidiReactor final
    : public grpc::ServerBidiReactor<helloworld::HelloRequest,
                                     helloworld::HelloReply> {
 public:
  SlowReadingBidiReactor() {
    // Start reading the first request immediately
    StartRead(&req_);
  }

  /**
   * @brief Callback invoked when a read operation completes.
   * @param ok Whether the read operation was successful.
   */
  void OnReadDone(bool ok) override {
    std::cout << "Received request with " << req_.name().length()
              << " bytes name\n";
    if (!ok) {
      // If read failed (client closed stream), finish the call
      Finish(grpc::Status::OK);
      return;
    }
    // Intentionally sleep to simulate slow processing
    sleep(1);
    // Start reading the next request
    StartRead(&req_);
  }

  /**
   * @brief Callback invoked when the RPC is done.
   * Cleans up the reactor instance.
   */
  void OnDone() override {
    std::cout << "Done\n";
    delete this;
  }

 private:
  absl::Mutex mu_;  // Mutex for thread safety
  helloworld::HelloRequest req_;  // Current request being processed
};

/**
 * @class GreeterServiceImpl
 * @brief Implementation of the Greeter service.
 *
 * Provides a bidirectional streaming RPC method for greeting.
 */
class GreeterServiceImpl final : public helloworld::Greeter::CallbackService {
  /**
   * @brief Implementation of the bidirectional streaming SayHello RPC.
   * @param context Server context (unused in this implementation).
   * @return A new SlowReadingBidiReactor instance to handle the stream.
   */
  grpc::ServerBidiReactor<helloworld::HelloRequest, helloworld::HelloReply>*
  SayHelloBidiStream(grpc::CallbackServerContext* ) override {
    return new SlowReadingBidiReactor();
  }
};

}  // namespace

/**
 * @brief Runs the gRPC server.
 * @param port The port number to listen on.
 */
void RunServer(uint16_t port) {
  // Create server address string
  std::string server_address = absl::StrFormat("0.0.0.0:%d", port);
  GreeterServiceImpl service;

  // Enable default health check service and reflection
  grpc::EnableDefaultHealthCheckService(true);
  grpc::reflection::InitProtoReflectionServerBuilderPlugin();
  
  // Configure and start the server
  grpc::ServerBuilder builder;
  
  // Add listening port with insecure credentials (for demo purposes)
  builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
  
  // Register the service implementation
  builder.RegisterService(&service);
  
  // Set resource quota from command line flag
  grpc::ResourceQuota quota;
  quota.Resize(absl::GetFlag(FLAGS_quota) * 1024 * 1024);

  // Build and start the server
  auto server = builder.BuildAndStart();
  std::cout << "Server listening on " << server_address << std::endl;

  // Wait for server shutdown
  server->Wait();
}

/**
 * @brief Entry point for the server application.
 * @param argc Argument count.
 * @param argv Argument vector.
 * @return Exit status.
 */
int main(int argc, char** argv) {
  // Parse command line flags and initialize logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();
  
  // Run the server with the specified port
  RunServer(absl::GetFlag(FLAGS_port));
  return 0;
}
```

Key additions in the comments:
1. Added class-level documentation explaining the purpose of each component
2. Added detailed method documentation for all non-trivial functions
3. Explained the purpose of each major code block
4. Documented the bidirectional streaming behavior and intentional slowdown
5. Added notes about thread safety where relevant
6. Explained the command line flag usage
7. Added namespace boundary comments
8. Documented the main control flow of the application

The comments are designed to help future developers understand:
- The overall architecture of the service
- The purpose of each component
- The flow of control through the system
- Important implementation details
- Safety considerations (like the mutex and resource quota)
- The intentional slowdown behavior for demonstration purposes